integration_tests/codegen_fail/fail/interface/fields_duplicate.stderr
error: GraphQL interface must have a different name for each field
  --> $DIR/fields_duplicate.rs:13:1
   |
13 | / trait Character {
14 | |     fn id(&self) -> &str {
15 | |         "funA"
16 | |     }
...  |
21 | |     }
22 | | }
   | |_^
   |
   = note: https://spec.graphql.org/June2018/#sec-Interfaces

error[E0412]: cannot find type `CharacterValue` in this scope
 --> $DIR/fields_duplicate.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Character` in this scope
  --> $DIR/fields_duplicate.rs:10:6
   |
10 | impl Character for ObjA {}
   |      ^^^^^^^^^ not found in this scope
